# ComfyWatchman

./: .env.example  .flake8  .gitignore  .gitmodules  AGENTS.md  AGENT_HANDOFF.md  CHANGELOG.md  CIVITAI_ADVANCED_SEARCH_COMPLETE.md  CLAUDE.md  CONTRIBUTING.md  ENHANCED_UTILITIES_SUMMARY.md  GEMINI.md  HF_PATTERN_RECOGNITION_IMPLEMENTATION.md  INTEGRATION_PLAN.md  MODELS_DOWNLOAD_SUMMARY.md  NEXT_AGENT_PROMPT.txt  PR5_Comprehensive_Review_Summary.md  PR_BODY.md  PR_DESCRIPTION.md  PR_REVIEW_PROMPT.md  QWEN.md  README.md  REBOOT_INSTRUCTIONS.md  __init__.py  alternative_search.py  analyze_civitai_matches.py  comfy_fixer.sh  config-example.toml  config.toml  demonstrate_civitai_advanced_search.py  download_models.py  download_problematic_models_demo.py  environment_analysis_prompt.md  honest_assessment.sh  improved_download.py  missing_models_check.txt  models_summary.py  node_research_prompt.md  pyproject.toml  qwen_review_prompt.txt  (+13 more)
.githooks/: pre-commit
archive/comfywatchman-pre-copilot-graft/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PR5_Comprehensive_Review_Summary.md  QWEN.md  README.md  config-example.toml  qwen_review_prompt.txt  temp_workflow.json  workflows
archives/ScanTool/: SCanGuide.md  models_organized.json  scan_results_sorted.json  workflow-wan22rapid-aio-mega-vC5JEDNO523RTxoxlNPH-t8star-openart.ai.json  workflow_validator.py
backend/service/: agent_mode.py  mcp_client.py  workflow_rewrite_agent_simple.py
backend/utils/: auth_utils.py  globals.py
civitai_tools/: README.md
civitai_tools/bash/: README.md  advanced_civitai_search.sh  batch_civitai_downloader.sh  fuzzy_civitai_finder.sh
civitai_tools/config/: README.md
civitai_tools/python/: README.md  direct_id_backend.py  search_debugger.py
config/: default.toml
docs/: CIVITAI_SEARCH_FIXES.md  CLEANUP_SUMMARY.md  CROSSROADS.md  Makefile  README.md  SEARCH_ARCHITECTURE.md  architecture.md  due_diligence_plan.md  migration-cheat-sheet.md  migration-checklist.md  migration-guide.md  migration-release-plan.md  migration-testing-strategy.md  requirements.txt  thoughTprocess.md  version-management.md  vision.md
docs/adr/: 0001-combined-adr-catalog.md  0001-python-version-policy.md  2025-10-19-decision-points-and-adr-backlog.md
docs/architecture/: vision.md
docs/comfywatchman-history/: COPILOT_GRAFT_PROVENANCE.md  HISTORY_HARVEST.md
docs/developer/: ai-agent-guide.md  api-reference.md  architecture.md  developer-guide.md  release-process.md  testing.md  workflow_tooling_guide.md
docs/domains/: AUTOMATED_DOWNLOAD_WORKFLOW.md
docs/dumps/: discussion.md
docs/implementation/: implementation1029.md
docs/integration/: COPILOT_API_CONTRACT.md
docs/mcp/: MCPVisionDocument.md  implementationPlan.md
docs/notes/: CONSOLIDATED_PLAN.md  FINAL_RECOMMENDATIONS.md  documentation_review_summary.md
docs/phase0/: ARCHITECTURE_DECISION.md  README.md  RESTRUCTURE_COMPLETE.md  SALVAGE_INVENTORY.md  salvage_utilities.py
docs/phase1/: DASHBOARD_SPEC.md  INTEGRATION_PLAN.md  SCHEDULER_DESIGN.md  TESTING_PLAN.md
docs/phase2/: AGENTIC_SEARCH_DESIGN.md  INTEGRATION_PLAN.md  KNOWLEDGE_BASE_DESIGN.md  RESEARCH_PROMPTS.md  WORKFLOW_SCHEMAS.md
docs/phase3/: INTEGRATION_PLAN.md  RESEARCH_PROMPTS.md
docs/planning/: AGENT_GUIDE.md  BRANCH_RECONCILIATION_PLAN.md  EMBEDDING_SUPPORT_PLAN.md  INCREMENTAL_WORKFLOW.md  NEW_FEATURES.md  QWEN_PROMPT.md  QWEN_SEARCH_IMPLEMENTATION_PLAN.md  RIGHT_SIZED_PLAN.md
docs/plans/: FindingWorkflows.md  civitai_image_format_research_prompt.md  comprehensive_workflow_discovery_research_prompt.md
docs/playbooks/: model-resolution-playbook.md
docs/priority/: pathforward.md
docs/reports/: CLAUDE_VERIFICATION.md  INTEGRATION_VERIFICATION_2025-10-29.md  inpainting_workflow_research_report.md
docs/research/: ComfyUI-Copilot-Research-Report.md  ComfyUI-Copilot_Analysis.md  LANGGRAPH_RESEARCH_PROMPT.md  RESEARCH_PROMPT.md  ZAI_PROVIDER.md
docs/review/: AGENT_TOOLING_REVIEW.md
docs/reviews/: python_port_review_prompt.md  python_port_review_results.md
docs/roadmap/: COMPREHENSIVE_ROADMAP.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md
docs/scripts/: validate_examples.py  validate_links.py  validate_structure.py
docs/strategy/: COMFYUI_MANAGER_ADOPTION_PLAN.md  COMFY_HARNESS_CONSIDERATIONS.md  COMFY_MCP_DONOR_EVALUATION.md  COPILOT_INVESTIGATION_SPIKE_FINDINGS.md  FutureFileTree.md  ROADMAP.md  STATE_OF_THE_PROJECT.md  vision.md
docs/tasks/: adr-checklist.md
docs/technical/: DOMAIN_ARCHITECTURE_STANDARDS.md  faq.md  integrations.md  migration-guide.md  performance.md
docs/temp/: FastCode1030.md
docs/testing/: 2025-10-19-download-test-results.md
docs/tools/: model_inspector.md
docs/truth/: Pathforward.md
docs/usage/: inspect.md
docs/user/: cli-reference.md  configuration.md  troubleshooting.md
docs/user-guide/: cli-reference.md  examples.md  inspect.md  installation.md  user-guide.md
frontend/: README.md
frontend/comfywatchman-dashboard/: README.md  package.json
legacy/: comfy_fixer.py.backup  comfy_fixer_compat.py  state_manager.py
scripts/: add_known_model.py  compat_wrapper.py  find_embeddings.py  migrate_config.py  migrate_state.py  rollback.py  run_qwen_search.py  validate_migration.py
scripts/utilities/: BATCH_WORKFLOW_FINDER_QUICK_REF.md  README_BATCH_WORKFLOW_FINDER.md  batch_workflow_finder.py  download_kacey_workflow_models.sh  download_workflow.py  organize_lazy_models.py  test_png_extraction.py
src/: __init__.py
src/adapters/: __init__.py  base.py  modelscope_search.py
src/comfyfixersmart/: __init__.py  cache_manager.py  cli.py  cli_inspect.py  config.py  core.py  download.py  enhanced_search.py  enhanced_utils.py  inspector.py  inventory.py  logging.py  scanner.py  scheduler.py  search.py  state_manager.py  submodule_loader.py  utils.py
src/comfywatchman/: __init__.py  cli.py  config.py  core.py  dashboard.py  dashboard_template.html  download.py  inventory.py  logging.py  scanner.py  scheduler.py  search.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_config.py  test_inspector.py  test_scanner.py
(+152 files in other folders)
